fix wrong gap in activities weirds shadow and footer padding

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,9 @@ nav a:active {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1);
 }
+
 
 .card img {
     /* remove the default inline display and set the image to cover the card */
@@ -379,7 +380,7 @@ nav a:active {
     padding-left: 0;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 15px;
+    column-gap: 30px;
     align-items: stretch;
 }
 
@@ -388,6 +389,7 @@ nav a:active {
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0;
     border-radius: 20px;
 }
 .activities ul li .card img {
@@ -413,7 +415,6 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 10px;
-    padding: 0 20px;
     margin: 0 50px;
     background-color: var(--main-bg-color);
 }
